Nueva opción de tamaño para la pizza llamado “XXL”
feature/new_pizza_size, donde se incluye , una nueva opción de tamaño para la pizza llamado “XXL”, en el fichero prepara_pedido.html.

--- a/prepara_pedido.html
+++ b/prepara_pedido.html
@@ -47,6 +47,7 @@
                 <option value="pequeña">Pequeña</option>
                 <option value="mediana">Mediana</option>
                 <option value="grande">Grande</option>
+                <option value="XXL">XXL</option>
             </select><br><br>
             <fieldset>
                 <legend>Ingredientes deseados:</legend><br>          
