Modificación HTML y AJAX
Modificar el código HTML de prepara_pedido.html para que las opcione stengan un identificador tasado (Pequeña = “S”, etc).
Implementar evento JQuery que se ejecute cada vez que cambia el selector de tamaño de pizza. La llamada $.ajax utilizará el método POST. En el id="resultado_tamano", se cargará la respuesta obtenida de la invocación AJAX.

--- a/prepara_pedido.html
+++ b/prepara_pedido.html
@@ -43,13 +43,14 @@
         <div id="datosPedido">
             <h2>Datos del pedido</h2>
 
-            <label for="tamaño">Tamaño de la pizza:</label>
-            <select id="tamaño" name="tamaño">
-                <option value="pequeña">Pequeña</option>
-                <option value="mediana">Mediana</option>
-                <option value="grande">Grande</option>
+            <label for="tamano">Tamaño de la pizza:</label>
+            <select id="tamano" name="tamano">
+                <option value="S">Pequeña</option>
+                <option value="M">Mediana</option>
+                <option value="L">Grande</option>
                 <option value="XXL">XXL</option>
             </select><br><br>
+            <div id="resultado_tamano"></div>
             <fieldset>
                 <legend>Ingredientes deseados:</legend><br>          
                 <input type="checkbox" id="jamonyork" name="ingredientes[]" value="Jamón York">
