--- a/prepara_pedido.html
+++ b/prepara_pedido.html
@@ -44,13 +44,13 @@
             <h2>Datos del pedido</h2>
 
             <label for="tamano">Tamaño de la pizza:</label>
-            <select id="tamano" name="tamano">
+            <select id="tamano" name="tamano">                
                 <option value="S">Pequeña</option>
                 <option value="M">Mediana</option>
                 <option value="L">Grande</option>
                 <option value="XXL">XXL</option>
             </select><br><br>
-            <div id="resultado_tamano"></div>
+            <div id="resultado_tamano"></div><br><br>
             <fieldset>
                 <legend>Ingredientes deseados:</legend><br>          
                 <input type="checkbox" id="jamonyork" name="ingredientes[]" value="Jamón York">
